--- a/donwloadFiles.html
+++ b/donwloadFiles.html
@@ -18,7 +18,223 @@
           <!-- Left bar -->
           <div class="col-sm-9 col-md-9 left"> 
 
-             
+           <!-- 1. 5 cards columns -->
+            <div class="card-deck roboto-12px">
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/2019%20ROJB%20(acualizat%2031%20ianuarie%202019)%20.pdf">2019 ROJB (acualizat 31 ianuarie 2019)</a></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/Calendar%20Competitional%202019-2020.pdf">Calendar Competitional 2019-2020</a></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/Echipamentul%20Tehnic%20al%20Jocului%20Baschet%20-%202014.pdf">Echipamentul Tehnic al Jocului Baschet - 2014</a></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/Grile%20de%20Transfer%20Juniori%202019-2020%20.pdf">Grile de Transfer Juniori 2019-2020</a></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/Interpretari%20Oficiale%20ROJB%20%E2%80%93%2031%20ianuarie%202019.pdf">Interpretari Oficiale ROJB – 31 ianuarie 2019</a></p>
+                </div>
+              </div>
+            </div> 
+
+            <br>
+
+              <!--2. 5 cards columns -->
+            <div class="card-deck roboto-12px">
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/IRS.pdf">IRS</a></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/Mecanica_arbitrajului_cu_2_arbitri.pdf">Mecanica_arbitrajului_cu_2_arbitri</a></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/Mecanica_arbitrajului_cu_3_arbitri.pdf">Mecanica_arbitrajului_cu_3_arbitri</a></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/Procedura%20autorizatie%20sportivi%20de%20performanta.pdf">Procedura autorizatie sportivi de performanta</a></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/Protocol%20medical%20pentru%20competitiile%20de%20baschet%20in%20aer%20liber.pdf">Protocol medical pentru competitiile de baschet in aer liber</a></p>
+                </div>
+              </div>
+            </div>
+
+            <br>
+
+             <!--3. 5 cards columns -->
+             <div class="card-deck roboto-12px">
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/Protocol%20medical%20pentru%20competitiile%20de%20baschet%20in%20sala_CRB%20masculin%20si%20feminin.pdf">Protocol medical pentru competitiile de baschet in sala_CRB masculin si feminin</a></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/Protocol%20Special%20de%20Meci%20-%20CRB_Turnee%20Preliminare.pdf">Protocol Special de Meci - CRB_Turnee Preliminare</a></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/Protocol%20Special%20de%20Meci%20Turnee%20Nationale%20de%20Baschet%20Juniori.pdf">Protocol Special de Meci Turnee Nationale de Baschet Juniori</a></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/RABR_%202017.pdf">RABR_ 2017</a></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/Regulament%20CCCB.pdf">Regulament CCCB</a></p>
+                </div>
+              </div>
+            </div>
+
+            <br>
+
+            <!--4. 5 cards columns -->
+            <div class="card-deck roboto-12px">
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/REGULAMENT%20FESTIVAL%20MINIBASCHET%20BABYBASCHET%202019.pdf">REGULAMENT FESTIVAL MINIBASCHET BABYBASCHET 2019</a></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/Regulament_Disciplina_FRB.pdf">Regulament_Disciplina_FRB</a></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/Regulament_Specific_CRBM_2020-2021.pdf">Regulament_Specific_CRBM_2020-2021</a></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/Regulamentul_Oficial_FIBA3x3.pdf">Regulamentul_Oficial_FIBA3x3</a></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/RGOCB.pdf">RGOCB</a></p>
+                </div>
+              </div>
+            </div>
+
+            <br>
+
+              <!--5. 5 cards columns -->
+              <div class="card-deck roboto-12px">
+                <div class="card">
+                  <div class="card-body text-center">
+                    <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/ROJB_Modificari%20cu%20efect%20de%20la%2001%20octombrie%202018.pdf">ROJB_Modificari cu efect de la 01 octombrie 2018</a></p>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-body text-center">
+                    <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/RS_3x3_CRBM_2020.pdf">RS_3x3_CRBM_2020</a></p>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-body text-center">
+                    <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/RS_CRF_2019-2020_1.1.pdf">RS_CRF_2019-2020_1.1</a></p>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-body text-center">
+                    <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/RS_L1_M_2019-2020_modif_cf_CD_24.09.2019.pdf">RS_L1_M_2019-2020_modif_cf_CD_24.09.2019</a></p>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-body text-center">
+                    <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/RS_LNBF_2019-2020.pdf">RS_LNBF_2019-2020</a></p>
+                  </div>
+                </div>
+              </div>
+
+              <br>
+
+              <!--6. 5 cards columns -->
+              <div class="card-deck roboto-12px">
+                <div class="card">
+                  <div class="card-body text-center">
+                    <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/RS_LNBM_2019-2020.pdf">RS_LNBM_2019-2020</a></p>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-body text-center">
+                    <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/RSCN%202019-2020_U13_V1.2.pdf">RSCN 2019-2020_U13_V1.2</a></p>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-body text-center">
+                    <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/RSCN%202019-2020_U14_V1.2.pdf">RSCN 2019-2020_U14_V1.2</a></p>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-body text-center">
+                    <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/RSCN%202019-2020_U15_V1.2.pdf">RSCN 2019-2020_U15_V1.2</a></p>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="card-body text-center">
+                    <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/RSCN%202019-2020_U16.pdf">RSCN 2019-2020_U16</a></p>
+                  </div>
+                </div>
+              </div>
+
+<br>
+
+            <!--7. 5 cards columns -->
+            <div class="card-deck roboto-12px">
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/RSCN%202019-2020_U18_V1.2.pdf">RSCN 2019-2020_U18_V1.2</a></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/RSCN%202019-2020_U20.pdf">RSCN 2019-2020_U20</a></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/Statut_FRB_2017.pdf">Statut_FRB_2017</a></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/Tabela%20Berger_FIBA.pdf">Tabela Berger_FIBA</a></p>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body text-center">
+                  <p class="card-text" ><a href="https://www.frbaschet.ro/public/storage/pages/Regulamente/Taxa_de_formare.pdf">Taxa_de_formare</a></p>
+                </div>
+              </div>
+            </div>
+
+            <br>
+
        </div>
        <!-- End of left bar -->
 
