--- a/donwloadFiles.html
+++ b/donwloadFiles.html
@@ -18,7 +18,7 @@
           <!-- Left bar -->
           <div class="col-sm-9 col-md-9 left"> 
 
-           <!-- 1. 5 cards columns -->
+           <!-- A. (5 cards columns) -->
             <div class="card-deck roboto-12px">
               <div class="card">
                 <div class="card-body text-center">
@@ -49,7 +49,7 @@
 
             <br>
 
-              <!--2. 5 cards columns -->
+               <!-- B. (5 cards columns) -->
             <div class="card-deck roboto-12px">
               <div class="card">
                 <div class="card-body text-center">
@@ -80,7 +80,7 @@
 
             <br>
 
-             <!--3. 5 cards columns -->
+             <!-- C. (5 cards columns) -->
              <div class="card-deck roboto-12px">
               <div class="card">
                 <div class="card-body text-center">
@@ -111,7 +111,7 @@
 
             <br>
 
-            <!--4. 5 cards columns -->
+             <!-- D. (5 cards columns) -->
             <div class="card-deck roboto-12px">
               <div class="card">
                 <div class="card-body text-center">
@@ -142,7 +142,7 @@
 
             <br>
 
-              <!--5. 5 cards columns -->
+               <!-- E. (5 cards columns) -->
               <div class="card-deck roboto-12px">
                 <div class="card">
                   <div class="card-body text-center">
@@ -173,7 +173,7 @@
 
               <br>
 
-              <!--6. 5 cards columns -->
+               <!-- F. (5 cards columns) -->
               <div class="card-deck roboto-12px">
                 <div class="card">
                   <div class="card-body text-center">
@@ -204,7 +204,7 @@
 
 <br>
 
-            <!--7. 5 cards columns -->
+            <!-- G. (5 cards columns) -->
             <div class="card-deck roboto-12px">
               <div class="card">
                 <div class="card-body text-center">
